opam-version: "2.0"
version: "1.0"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]

install: [ make ]
depends: [ ]

description: "Algorithms from the Yale-NUS College module on Introductory Data Structures and Algorithms (YSC2229)"

tags: [
  "category:Computer Science/Education/Basic Algorithms and Data Structures"
  "keyword:data structures"
  "keyword:algorithms"
]
